2015-03-30  Per Bothner  <per@bothner.com>

	* CodeAttr.java (disAssembleWithFixups): Print FIXUP_TRY_HANDLER.

2015-03-29  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitPushNull): Add overload that takes a type.
	(gotoFinallyOrEnd): Specify type of pushed null, in case we need
	to emit a stack-map entry.

2015-03-25  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitFinallyEnd): Check if reachableHere() - otherwise
	clear end_label and don't generate any code.

2015-02-28  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitWithCleanupCatch, emitWithCleanupDone):
	Don't save/restore stack types - that is handled by the Label objects.
	(emitTryEnd - 0-argument): Decprecate and make empty.
	(emitFinallyStart): Re-order code we only have forward gotos.

2015-02-17  Per Bothner  <per@bothner.com>

	* ClassType.java (removeField): New method.
	* Method.java (setReturnType): New method.

2015-01-30  Per Bothner  <per@bothner.com>

	* ClassType.java (isCompatibleWithValue): Explicit handling of nullType.

2015-01-29  Per Bothner  <per@bothner.com>

	* ClassType.java (isCompatibleWithValue): If this is an interface,
	and the value type is a class that does not implement the interface
	consider it incompatible.

2014-12-22  Per Bothner  <per@bothner.com>

	* Type.java (isCompatibleWithValue): New static helper.

2014-12-15  Victor van den Elzen

	* SpecialObjectType.java (compare): Check for comparing
	toStringType to itself.

2014-12-09  Per Bothner  <per@bothner.com>

	* CodeAttr.java (emitIfIntGEqZero, emitIfIntGEq): New methods.

2014-12-08  Per Bothner  <per@bothner.com>

	* ExitableBlock.java (exit): Do nothing  if not reachableHere.

	* IfState.java (start_stack_size, stack_growth, then_stacked_types):
	Remove fields.  This old logic was redundant, since using a Label
	handles type merging just as well.  Actually better, since the old
	code had problem setting start_stack_size correctly in some cases.
	* CodeAttr.java: Update and simplify accordingly.
