@@ -1,5 +1,11 @@
 2015-03-30  Per Bothner  <per@bothner.com>
 
+	* ObjectType.java (promote): Remove - we don't want to promote
+	nullType to objectType, since the latter is needed for stack-maps.
+	* CodeAttr.java (gotoFinallyOrEnd): Revert previous change,
+	since above change makes it unnecessary.
+	* CodeAttr.java (addHandle): Note that we're reachable here.
+
 	* CodeAttr.java (disAssembleWithFixups): Print FIXUP_TRY_HANDLER.
 
 2015-03-29  Per Bothner  <per@bothner.com>
